Different tld for captive portal (.local is for mdns), added options to make esptool.py also capable of flashing the stupid DIO-requiring NodeMCU version, fixed OTA Makefile

--- a/Makefile.combined
+++ b/Makefile.combined
@@ -25,8 +25,8 @@ $(FW_BASE): $(TARGET_OUT)
 	$(Q) $(ESPTOOL) elf2image $(TARGET_OUT) --output $@/
 
 flash: $(TARGET_OUT) $(FW_BASE)
-	$(Q) $(ESPTOOL) --port $(ESPPORT) --baud $(ESPBAUD) write_flash 0x00000 $(FW_BASE)/0x00000.bin 0x40000 $(FW_BASE)/0x40000.bin
+	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) 0x00000 $(FW_BASE)/0x00000.bin 0x40000 $(FW_BASE)/0x40000.bin
 
 blankflash:
-	$(Q) $(ESPTOOL) --port $(ESPPORT) --baud $(ESPBAUD) write_flash 0x7E000 $(SDK_BASE)/bin/blank.bin
+	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) 0x7E000 $(SDK_BASE)/bin/blank.bin
 
