--- a/Makefile.separate
+++ b/Makefile.separate
@@ -27,7 +27,7 @@ flash: $(TARGET_OUT) $(FW_BASE)
 	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash  $(ESPTOOL_FLASHDEF) 0x00000 $(FW_BASE)/0x00000.bin 0x40000 $(FW_BASE)/0x40000.bin
 
 blankflash:
-	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash  $(ESPTOOL_FLASHDEF) 0x7E000 $(SDK_BASE)/bin/blank.bin
+	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash  $(ESPTOOL_FLASHDEF) 0x7E000 $(SDK_BASE)/bin/blank.bin 0x7C000 $(SDK_BASE)/bin/esp_init_data_default.bin
 
 htmlflash: libesphttpd
 	$(Q) if [ $$(stat -c '%s' libesphttpd/webpages.espfs) -gt $$(( $(ESPFS_SIZE) )) ]; then echo "webpages.espfs too big!"; false; fi
