--- a/Makefile.ota
+++ b/Makefile.ota
@@ -1,6 +1,9 @@
 #Makefile with the options specific to the build of a non-upgradable firmware with
 #the espfs combined into the flash binary.
 
+# Change tagname to some identifier that's unique for your project. 27 chars max.
+TAGNAME ?= "generic"
+
 # linker script used for the linker step
 
 LD_MAP_1:=512:eagle.app.v6.new.512.app1.ld 1024:eagle.app.v6.new.1024.app1.ld 2048:eagle.app.v6.new.2048.ld 4096:eagle.app.v6.new.2048.ld
@@ -15,6 +18,8 @@ TARGET_OUT	:=  $(TARGET_OUT_USR1) $(TARGET_OUT_USR2)
 TARGET_BIN_USR1 := $(addprefix $(BUILD_BASE)/,$(TARGET).user1.bin)
 TARGET_BIN_USR2 := $(addprefix $(BUILD_BASE)/,$(TARGET).user2.bin)
 TARGET_BIN	:=  $(TARGET_BIN_USR1) $(TARGET_BIN_USR2)
+TARGET_OTAFILE := $(addprefix $(BUILD_BASE)/,$(TARGET).ota)
+
 
 BLANKPOS="$$(printf "0x%X" $$(($(ESP_SPI_FLASH_SIZE_K)*512-0x2000)))"
 INITDATAPOS="$$(printf "0x%X" $$(($(ESP_SPI_FLASH_SIZE_K)*512-0x4000)))"
@@ -22,6 +27,8 @@ INITDATAPOS="$$(printf "0x%X" $$(($(ESP_SPI_FLASH_SIZE_K)*512-0x4000)))"
 #Convert SPI size into arg for appgen. Format: no=size
 FLASH_MAP_CONV:=0:512 2:1024 5:2048 6:4096
 ESP_FLASH_SIZE_IX:=$(maplookup $(ESP_SPI_FLASH_SIZE_K),,$(FLASH_MAP_CONV))
+
+CFLAGS += -DOTA_TAGNAME=\"$(TAGNAME)\"
 
 define genappbin
 $(1): $$(APP_AR)
@@ -70,21 +77,15 @@ ldscript_memspecific.ld:
 #user1.bin:
 #	$(call makeuser,user1.bin,1)
 
+libesphttpd/mkupgimg/mkupgimg: libesphttpd/mkupgimg/
+	make -C libesphttpd/mkupgimg/
 
-$(FW_BASE): $(TARGET_BIN)
-#	$(vecho) "FW $@"
-#	$(Q) mkdir -p $@
-#	$(Q) $(ESPTOOL) elf2image $(TARGET_OUT) --output $@/
-
-
+$(FW_BASE): $(TARGET_BIN) libesphttpd/mkupgimg/mkupgimg
+	$(Q) libesphttpd/mkupgimg/mkupgimg $(TARGET_BIN_USR1) $(TARGET_BIN_USR2) $(TAGNAME) $(TARGET_OTAFILE)
 
 flash: $(TARGET_OUT) $(FW_BASE)
-	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) 0x00000 "$(SDK_BASE)/bin/boot_v1.4(b1).bin" 0x1000 $(TARGET_BIN_USR1)
-#	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) 0x00000 $(FW_BASE)/0x00000.bin 0x40000 $(FW_BASE)/0x40000.bin
+	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) 0x00000 "$(SDK_BASE)/bin/boot_v1.5.bin" 0x1000 $(TARGET_BIN_USR1)
 
 blankflash:
 	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) $(BLANKPOS) $(SDK_BASE)/bin/blank.bin $(INITDATAPOS) $(SDK_BASE)/bin/esp_init_data_default.bin
 
-htmlflash: libesphttpd
-	$(Q) if [ $$(stat -c '%s' libesphttpd/webpages.espfs) -gt $$(( $(ESPFS_SIZE) )) ]; then echo "webpages.espfs too big!"; false; fi
-	$(Q) $(ESPTOOL)  $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) $(ESPFS_POS) libesphttpd/webpages.espfs
