Add make httpflash command for commandline ota flashing

--- a/Makefile.ota
+++ b/Makefile.ota
@@ -89,3 +89,8 @@ flash: $(TARGET_OUT) $(FW_BASE)
 blankflash:
 	$(Q) $(ESPTOOL) $(ESPTOOL_OPTS) write_flash $(ESPTOOL_FLASHDEF) $(BLANKPOS) $(SDK_BASE)/bin/blank.bin $(INITDATAPOS) $(SDK_BASE)/bin/esp_init_data_default.bin
 
+httpflash: $(FW_BASE)
+	$(Q) curl -X POST --data-binary '@build/httpd.ota' $(ESPIP)/flash/upload > /dev/null
+	$(Q) curl $(ESPIP)/flash/reboot
+	$(Q) echo -e '\nDone'
+
