--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libesphttpd"]
 	path = libesphttpd
-	url = http://git.spritesserver.nl/libesphttpd.git/
+	url = git@github.com:MightyPork/libesphttpd.git
