more commands and glitches fixed, better debug messages, discard bad unicode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ add_definitions(
         -DFLAG_GZIP=2
         -DADMIN_PASSWORD="asdf"
         -DGIT_HASH="blabla"
+        -DDEBUG_ANSI=1
         -DESPFS_HEATSHRINK)
 
 add_executable(esp_vt100_firmware ${SOURCE_FILES})
