updated branch cfg in .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "libesphttpd"]
 	path = libesphttpd
 	url = git@github.com:MightyPork/libesphttpd.git
+	branch = master
 [submodule "front-end"]
 	path = front-end
 	url = git@github.com:espterm/espterm-front-end.git
