--- a/esphttpdconfig.mk.example
+++ b/esphttpdconfig.mk.example
@@ -42,6 +42,7 @@ GLOBAL_CFLAGS = \
     -DDEBUG_ROUTER=0 \
     -DDEBUG_CAPTDNS=0 \
     -DDEBUG_HTTP=0 \
+    -DDEBUG_HTTPC=0 \
     -DDEBUG_ESPFS=0 \
     -DDEBUG_PERSIST=1 \
     -DDEBUG_UTFCACHE=0 \
