--- a/esphttpdconfig.mk.example
+++ b/esphttpdconfig.mk.example
@@ -39,6 +39,7 @@ OUTPUT_TYPE = combined
 ESP_SPI_FLASH_SIZE_K = 1024
 
 GLOBAL_CFLAGS = \
+    -DDEBUG_D2D=0 \
     -DDEBUG_ROUTER=0 \
     -DDEBUG_CAPTDNS=0 \
     -DDEBUG_HTTP=0 \
