--- a/esphttpdconfig.mk.example
+++ b/esphttpdconfig.mk.example
@@ -40,6 +40,7 @@ ESP_SPI_FLASH_SIZE_K = 1024
 
 GLOBAL_CFLAGS = \
     -DASYNC_LOG=1 \
+    -DDEBUG_INI=0 \
     -DDEBUG_D2D=0 \
     -DDEBUG_ROUTER=0 \
     -DDEBUG_CAPTDNS=0 \
